Basic Homepage structure and parallax background

--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>P-Number</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  
-  <h1>Hello World</h1>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Toxic Dance</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <div class="parallax">
+      <div class="parallax-layer parallax-background">
+        <img src="img/toxic_logo.png" />
+      </div>
+      <div class="parallax-layer parallax-foreground">
+        <nav></nav>
+        <section id="first-view">
+          <h1>We are Toxic Dance</h1>
+        </section>
+        <section id="second-view">
+          <h1>Bold</h1>
+        </section>
+        <section id="second-view">
+          <h1>Competitive</h1>
+        </section>
+        <section id="third-view">
+          <h1>Fun</h1>
+        </section>
+        <!-- <div>
+          Icons made by
+          <a href="https://www.flaticon.com/authors/becris" title="Becris"
+            >Becris</a
+          >
+          from
+          <a href="https://www.flaticon.com/" title="Flaticon"
+            >www.flaticon.com</a
+          >
+        </div> -->
+      </div>
+    </div>
 
-  <script src="js/scripts.js"></script>
-</body>
+    <script src="js/scripts.js"></script>
+  </body>
 </html>
