Made the parallax effect better. Added images to homepage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="parallax">
       <div class="parallax-layer parallax-background">
-        <img src="img/toxic_logo.png" />
+        <img id="toxic-logo" src="img/toxic_logo.png" />
       </div>
       <div class="parallax-layer parallax-foreground">
         <nav></nav>
@@ -18,23 +18,51 @@
         </section>
         <section id="second-view">
           <h1>Bold</h1>
-        </section>
-        <section id="second-view">
-          <h1>Competitive</h1>
+          <img id="bold1" src="img/bold1.png" alt="bold1" />
+          <img id="bold2" src="img/bold3.png" alt="bold2" />
+          <img id="bold3" src="img/bold2.png" alt="bold3" />
         </section>
         <section id="third-view">
-          <h1>Fun</h1>
+          <h1>Competitive</h1>
+          <img
+            id="competitive1"
+            src="img/competitive1.png"
+            alt="competitive1"
+          />
+          <img
+            id="competitive2"
+            src="img/competitive3.png"
+            alt="competitive2"
+          />
+          <img
+            id="competitive3"
+            src="img/competitive2.png"
+            alt="competitive3"
+          />
         </section>
-        <!-- <div>
+        <section id="fourth-view">
+          <h1>Fun</h1>
+          <img src="img/fun2.png" alt="fun1" />
+          <img src="img/fun1.png" alt="fun2" />
+          <img src="img/fun3.png" alt="fun3" />
+        </section>
+        <footer>
           Icons made by
           <a href="https://www.flaticon.com/authors/becris" title="Becris"
             >Becris</a
           >
+          and
+          <a href="https://www.flaticon.com/authors/srip" title="srip">srip</a>
           from
           <a href="https://www.flaticon.com/" title="Flaticon"
             >www.flaticon.com</a
           >
-        </div> -->
+          <!-- IF I USE MENU2 
+            <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" 
+              title="Pixel perfect">Pixel perfect</a> from <a 
+              href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+           -->
+        </footer>
       </div>
     </div>
 
