Front page almost finished

--- a/index.html
+++ b/index.html
@@ -4,64 +4,102 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toxic Dance</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" type="text/css" />
   </head>
   <body>
+    <nav class="fade-in">
+      <img src="img/globe.png" alt="language icon" />
+      <img src="img/menu.png" alt="menu icon" />
+    </nav>
+
     <div class="parallax">
       <div class="parallax-layer parallax-background">
-        <img id="toxic-logo" src="img/toxic_logo.png" />
+        <img
+          id="toxic-logo"
+          src="img/toxic_logo.png"
+          alt="Toxic logo (background)"
+        />
       </div>
+
       <div class="parallax-layer parallax-foreground">
-        <nav></nav>
-        <section id="first-view">
-          <h1>We are Toxic Dance</h1>
-        </section>
-        <section id="second-view">
-          <h1>Bold</h1>
-          <img id="bold1" src="img/bold1.png" alt="bold1" />
-          <img id="bold2" src="img/bold3.png" alt="bold2" />
-          <img id="bold3" src="img/bold2.png" alt="bold3" />
-        </section>
-        <section id="third-view">
-          <h1>Competitive</h1>
-          <img
-            id="competitive1"
-            src="img/competitive1.png"
-            alt="competitive1"
-          />
-          <img
-            id="competitive2"
-            src="img/competitive3.png"
-            alt="competitive2"
-          />
-          <img
-            id="competitive3"
-            src="img/competitive2.png"
-            alt="competitive3"
-          />
-        </section>
-        <section id="fourth-view">
-          <h1>Fun</h1>
-          <img src="img/fun2.png" alt="fun1" />
-          <img src="img/fun1.png" alt="fun2" />
-          <img src="img/fun3.png" alt="fun3" />
-        </section>
+        <main>
+          <section class="first-view">
+            <h1 class="main-title fade-in">We are Toxic Dance</h1>
+          </section>
+
+          <section id="second-view">
+            <h1 class="sub-title fade-in">Bold</h1>
+            <figure id="block1">
+              <img
+                class="img-in-block fade-in"
+                src="img/bold1.png"
+                alt="bold1"
+              />
+              <img
+                class="img-in-block fade-in"
+                src="img/bold3.png"
+                alt="bold2"
+              />
+              <img
+                class="img-in-block fade-in"
+                src="img/bold2.png"
+                alt="bold3"
+              />
+            </figure>
+          </section>
+
+          <section id="third-view">
+            <h1 class="sub-title fade-in">Competitive</h1>
+
+            <figure id="block2">
+              <img
+                class="img-in-block fade-in"
+                src="img/competitive1.png"
+                alt="competitive1"
+              />
+              <img
+                class="img-in-block fade-in"
+                src="img/competitive3.png"
+                alt="competitive2"
+              />
+              <img
+                class="img-in-block fade-in"
+                src="img/competitive2.png"
+                alt="competitive3"
+              />
+            </figure>
+          </section>
+
+          <section id="fourth-view">
+            <h1 class="sub-title fade-in">Fun</h1>
+            <figure id="block3">
+              <img class="img-in-block fade-in" src="img/fun2.png" alt="fun1" />
+              <img class="img-in-block fade-in" src="img/fun1.png" alt="fun2" />
+              <img class="img-in-block fade-in" src="img/fun3.png" alt="fun3" />
+            </figure>
+          </section>
+        </main>
+
         <footer>
           Icons made by
           <a href="https://www.flaticon.com/authors/becris" title="Becris"
             >Becris</a
           >
           and
-          <a href="https://www.flaticon.com/authors/srip" title="srip">srip</a>
+          <a
+            href="https://www.flaticon.com/authors/pixel-perfect"
+            title="Pixel perfect"
+            >Pixel perfect</a
+          >
           from
           <a href="https://www.flaticon.com/" title="Flaticon"
             >www.flaticon.com</a
           >
           <!-- IF I USE MENU2 
-            <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" 
-              title="Pixel perfect">Pixel perfect</a> from <a 
-              href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-           -->
+                <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" 
+                  title="Pixel perfect">Pixel perfect</a> from <a 
+                  href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+               -->
         </footer>
       </div>
     </div>
