Added user prompt to scroll, animated it Fixed footer

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         <main>
           <section class="first-view">
             <h1 class="main-title fade-in">We are Toxic Dance</h1>
+            <img
+              class="down-arrow fade-in"
+              src="img\icons8-expand-arrow-100.png"
+              alt="down arrow"
+            />
           </section>
 
           <section id="second-view">
@@ -81,25 +86,28 @@
         </main>
 
         <footer>
-          Icons made by
-          <a href="https://www.flaticon.com/authors/becris" title="Becris"
-            >Becris</a
-          >
-          and
-          <a
-            href="https://www.flaticon.com/authors/pixel-perfect"
-            title="Pixel perfect"
-            >Pixel perfect</a
-          >
-          from
-          <a href="https://www.flaticon.com/" title="Flaticon"
-            >www.flaticon.com</a
-          >
-          <!-- IF I USE MENU2 
-                <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" 
-                  title="Pixel perfect">Pixel perfect</a> from <a 
-                  href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-               -->
+          <p id="copyright">&copy; Copyright 2021 Daniel Sergilov</p>
+          <p id="icon-credit">
+            Icons made by
+            <a href="https://www.flaticon.com/authors/becris" title="Becris"
+              >Becris</a
+            >
+            and
+            <a
+              href="https://www.flaticon.com/authors/pixel-perfect"
+              title="Pixel perfect"
+              >Pixel perfect</a
+            >
+            from
+            <a href="https://www.flaticon.com/" title="Flaticon"
+              >www.flaticon.com</a
+            >
+            <br />
+            <a target="_blank" href="undefined/icons/set/expand-arrow--v1"
+              >Expand Arrow icon</a
+            >
+            icon by <a target="_blank" href="">Icons8</a>
+          </p>
         </footer>
       </div>
     </div>
