--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1 class="main-title fade-in">We are Toxic Dance</h1>
             <img
               class="down-arrow fade-in"
-              src="img\icons8-expand-arrow-100.png"
+              src="img/icons8-expand-arrow-100.png"
               alt="down arrow"
             />
           </section>
