--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </nav>
 
     <div class="parallax">
-      <div class="parallax-layer parallax-background">
+      <div class="parallax-layer parallax-background toxic-logo">
         <img
           id="toxic-logo"
           src="img/toxic_logo.png"
