Finished Home page

--- a/index.html
+++ b/index.html
@@ -6,11 +6,36 @@
     <title>Toxic Dance</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
   </head>
+
   <body>
-    <nav class="fade-in">
-      <img src="img/globe.png" alt="language icon" />
-      <img src="img/menu.png" alt="menu icon" />
+    <nav>
+      <div id="action-area">
+        <a href="index.html"><h1>Home</h1></a>
+        <a href="story.html"><h1>Our Story</h1></a>
+        <a href="performance.html"><h1>Performance</h1></a>
+        <a href="contact.html"><h1>Contact Us</h1></a>
+        <div id="social-media-icons">
+          <a href="https://www.instagram.com/toxic.dance">
+            <img src="img/instagram.svg" alt="Instagram icon" />
+          </a>
+          <a href="https://www.youtube.com/ToxicDance">
+            <img src="img/youtube.svg" alt="YouTube icon" />
+          </a>
+          <a href="https://www.tiktok.com/@toxic.dance.bg">
+            <img src="img/tiktok.svg" alt="TikTok icon" />
+          </a>
+          <a href="https://www.facebook.com/ToxicGroupOfficial">
+            <img src="img/facebook.svg" alt="Facebook icon" />
+          </a>
+        </div>
+      </div>
+      <div id="close-area"></div>
     </nav>
+
+    <header class="fade-in">
+      <img id="menu-button" src="img/menu.png" alt="menu icon" />
+      <!-- <img src="img/globe.png" alt="language icon" /> -->
+    </header>
 
     <div class="parallax">
       <div class="parallax-layer parallax-background toxic-logo">
@@ -82,6 +107,17 @@
               <img class="img-in-block fade-in" src="img/fun1.png" alt="fun2" />
               <img class="img-in-block fade-in" src="img/fun3.png" alt="fun3" />
             </figure>
+          </section>
+
+          <section id="our-story-button">
+            <a href="story.html">
+              <h1 class="sub-title fade-in">Our Story</h1>
+              <img
+                class="right-arrow sub-title fade-in"
+                src="img/icons8-expand-arrow-100.png"
+                alt="down arrow"
+              />
+            </a>
           </section>
         </main>
 
