Added tablet / phone landscape styles

--- a/index.html
+++ b/index.html
@@ -61,16 +61,19 @@
             <h1 class="sub-title fade-in">Bold</h1>
             <figure id="block1">
               <img
+                id="bold1"
                 class="img-in-block fade-in"
                 src="img/bold1.png"
                 alt="bold1"
               />
               <img
+                id="bold2"
                 class="img-in-block fade-in"
                 src="img/bold3.png"
                 alt="bold2"
               />
               <img
+                id="bold3"
                 class="img-in-block fade-in"
                 src="img/bold2.png"
                 alt="bold3"
@@ -83,16 +86,19 @@
 
             <figure id="block2">
               <img
+                id="competitive1"
                 class="img-in-block fade-in"
                 src="img/competitive1.png"
                 alt="competitive1"
               />
               <img
+                id="competitive2"
                 class="img-in-block fade-in"
                 src="img/competitive3.png"
                 alt="competitive2"
               />
               <img
+                id="competitive3"
                 class="img-in-block fade-in"
                 src="img/competitive2.png"
                 alt="competitive3"
@@ -103,9 +109,24 @@
           <section id="fourth-view">
             <h1 class="sub-title fade-in">Fun</h1>
             <figure id="block3">
-              <img class="img-in-block fade-in" src="img/fun2.png" alt="fun1" />
-              <img class="img-in-block fade-in" src="img/fun1.png" alt="fun2" />
-              <img class="img-in-block fade-in" src="img/fun3.png" alt="fun3" />
+              <img
+                id="fun1"
+                class="img-in-block fade-in"
+                src="img/fun2.png"
+                alt="fun1"
+              />
+              <img
+                id="fun2"
+                class="img-in-block fade-in"
+                src="img/fun1.png"
+                alt="fun2"
+              />
+              <img
+                id="fun3"
+                class="img-in-block fade-in"
+                src="img/fun3.png"
+                alt="fun3"
+              />
             </figure>
           </section>
 
