Organised files, started second page

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <a href="contact.html"><h1>Contact Us</h1></a>
         <div id="social-media-icons">
           <a href="https://www.instagram.com/toxic.dance">
-            <img src="img/instagram.svg" alt="Instagram icon" />
+            <img src="img/icons/instagram.svg" alt="Instagram icon" />
           </a>
           <a href="https://www.youtube.com/ToxicDance">
-            <img src="img/youtube.svg" alt="YouTube icon" />
+            <img src="img/icons/youtube.svg" alt="YouTube icon" />
           </a>
           <a href="https://www.tiktok.com/@toxic.dance.bg">
-            <img src="img/tiktok.svg" alt="TikTok icon" />
+            <img src="img/icons/tiktok.svg" alt="TikTok icon" />
           </a>
           <a href="https://www.facebook.com/ToxicGroupOfficial">
-            <img src="img/facebook.svg" alt="Facebook icon" />
+            <img src="img/icons/facebook.svg" alt="Facebook icon" />
           </a>
         </div>
       </div>
@@ -33,14 +33,15 @@
     </nav>
 
     <header class="fade-in">
-      <img id="menu-button" src="img/menu.png" alt="menu icon" />
-      <!-- <img src="img/globe.png" alt="language icon" /> -->
+      <img id="menu-button" src="img/icons/menu.png" alt="menu icon" />
+      <!-- <img src="img/icons/globe.png" alt="language icon" /> -->
     </header>
 
     <div class="parallax">
       <div class="parallax-layer parallax-background toxic-logo">
         <img
           id="toxic-logo"
+          class="logo-background"
           src="img/toxic_logo.png"
           alt="Toxic logo (background)"
         />
@@ -52,7 +53,7 @@
             <h1 class="main-title fade-in">We are Toxic Dance</h1>
             <img
               class="down-arrow fade-in"
-              src="img/icons8-expand-arrow-100.png"
+              src="img/icons/icons8-expand-arrow-100.png"
               alt="down arrow"
             />
           </section>
@@ -130,12 +131,12 @@
             </figure>
           </section>
 
-          <section id="our-story-button">
+          <section id="next-page-button">
             <a href="story.html">
               <h1 class="sub-title fade-in">Our Story</h1>
               <img
                 class="right-arrow sub-title fade-in"
-                src="img/icons8-expand-arrow-100.png"
+                src="img/icons/icons8-expand-arrow-100.png"
                 alt="down arrow"
               />
             </a>
@@ -146,24 +147,30 @@
           <p id="copyright">&copy; Copyright 2021 Daniel Sergilov</p>
           <p id="icon-credit">
             Icons made by
-            <a href="https://www.flaticon.com/authors/becris" title="Becris"
+            <a
+              target="_blank"
+              href="https://www.flaticon.com/authors/becris"
+              title="Becris"
               >Becris</a
             >
             and
             <a
+              target="_blank"
               href="https://www.flaticon.com/authors/pixel-perfect"
               title="Pixel perfect"
               >Pixel perfect</a
             >
             from
-            <a href="https://www.flaticon.com/" title="Flaticon"
+            <a target="_blank" href="https://www.flaticon.com/" title="Flaticon"
               >www.flaticon.com</a
             >
             <br />
-            <a target="_blank" href="undefined/icons/set/expand-arrow--v1"
-              >Expand Arrow icon</a
+            Expand Arrow icon icon by
+            <a
+              target="_blank"
+              href="https://icons8.com/icons/set/expand-arrow--v1"
+              >Icons8</a
             >
-            icon by <a target="_blank" href="">Icons8</a>
           </p>
         </footer>
       </div>
