finished 2nd page with placeholder text

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
           <section id="second-view">
             <h1 class="sub-title fade-in">Bold</h1>
-            <figure id="block1">
+            <figure class="block-fade-in" id="block1">
               <img
                 id="bold1"
                 class="img-in-block fade-in"
@@ -85,7 +85,7 @@
           <section id="third-view">
             <h1 class="sub-title fade-in">Competitive</h1>
 
-            <figure id="block2">
+            <figure class="block-fade-in" id="block2">
               <img
                 id="competitive1"
                 class="img-in-block fade-in"
@@ -109,7 +109,7 @@
 
           <section id="fourth-view">
             <h1 class="sub-title fade-in">Fun</h1>
-            <figure id="block3">
+            <figure class="block-fade-in" id="block3">
               <img
                 id="fun1"
                 class="img-in-block fade-in"
