--- a/story.html
+++ b/story.html
@@ -33,7 +33,7 @@
       <div id="close-area"></div>
     </nav>
 
-    <header class="fade-in">
+    <header>
       <img id="menu-button" src="img/icons/menu.png" alt="menu icon" />
       <!-- <img src="img/icons/globe.png" alt="language icon" /> -->
     </header>
@@ -50,11 +50,11 @@
 
       <div class="parallax-layer parallax-foreground">
         <main>
+          <h1 class="main-title fade-in">Our Story</h1>
           <section id="paragraph1">
-            <h1>Our Story</h1>
-            <h1>The Ragtag Team</h1>
-            <aside>
-              <p>
+            <h1 class="sub-title fade-in">The Ragtag Team</h1>
+            <article class="block-fade-in">
+              <p class="fade-in">
                 Error debitis sapiente quo vel maxime fugit accusantium
                 possimus. Esse perspiciatis aut est rem et dolorem perferendis.
                 Nemo enim molestias omnis quo. Et alias non nemo possimus quam.
@@ -64,24 +64,35 @@
                 quod corrupti. Quisquam voluptatibus aut magni omnis
                 necessitatibus ea eum id.
               </p>
-            </aside>
-            <video
-              width="720"
-              height="720"
-              muted
-              autoplay
-              loop
-              controlslist="nofullscreen nodownload noremoteplayback"
-            >
-              <source src="vid/dope.mp4" type="video/mp4" />
-              Please update your browser!
-            </video>
+              <div class="video-wrapper fade-in">
+                <video
+                  id="video"
+                  width="720"
+                  height="720"
+                  autoplay
+                  muted
+                  loop
+                  controlslist="nofullscreen nodownload noremoteplayback"
+                >
+                  <source src="vid/dope.mp4" type="video/mp4" />
+                  Please update your browser!
+                </video>
+                <img
+                  class="video-control play-pause"
+                  src="img/icons/002-pause.png"
+                />
+                <img
+                  class="video-control mute-unmute"
+                  src="img/icons/003-sound-off.png"
+                />
+              </div>
+            </article>
           </section>
 
           <section id="paragraph2">
-            <h1>Learning Curve</h1>
-            <aside>
-              <p>
+            <h1 class="sub-title fade-in">Learning Curve</h1>
+            <article class="block-fade-in">
+              <p class="fade-in">
                 Error debitis sapiente quo vel maxime fugit accusantium
                 possimus. Esse perspiciatis aut est rem et dolorem perferendis.
                 Nemo enim molestias omnis quo. Et alias non nemo possimus quam.
@@ -91,24 +102,35 @@
                 quod corrupti. Quisquam voluptatibus aut magni omnis
                 necessitatibus ea eum id.
               </p>
-            </aside>
-            <video
-              width="720"
-              height="720"
-              muted
-              autoplay
-              loop
-              controlslist="nofullscreen nodownload noremoteplayback"
-            >
-              <source src="vid/fantasy.mp4" type="video/mp4" />
-              Please update your browser!
-            </video>
+
+              <div class="video-wrapper fade-in">
+                <video
+                  width="720"
+                  height="720"
+                  muted
+                  autoplay
+                  loop
+                  controlslist="nofullscreen nodownload noremoteplayback"
+                >
+                  <source src="vid/fantasy.mp4" type="video/mp4" />
+                  Please update your browser!
+                </video>
+                <img
+                  class="video-control play-pause"
+                  src="img/icons/002-pause.png"
+                />
+                <img
+                  class="video-control mute-unmute"
+                  src="img/icons/003-sound-off.png"
+                />
+              </div>
+            </article>
           </section>
 
           <section id="paragraph3">
-            <h1>Competition</h1>
-            <aside>
-              <p>
+            <h1 class="sub-title fade-in">Competition</h1>
+            <article class="block-fade-in">
+              <p class="fade-in">
                 Error debitis sapiente quo vel maxime fugit accusantium
                 possimus. Esse perspiciatis aut est rem et dolorem perferendis.
                 Nemo enim molestias omnis quo. Et alias non nemo possimus quam.
@@ -118,24 +140,35 @@
                 quod corrupti. Quisquam voluptatibus aut magni omnis
                 necessitatibus ea eum id.
               </p>
-            </aside>
-            <video
-              width="720"
-              height="720"
-              muted
-              autoplay
-              loop
-              controlslist="nofullscreen nodownload noremoteplayback"
-            >
-              <source src="vid/eye.mp4" type="video/mp4" />
-              Please update your browser!
-            </video>
+
+              <div class="video-wrapper fade-in">
+                <video
+                  width="720"
+                  height="720"
+                  muted
+                  autoplay
+                  loop
+                  controlslist="nofullscreen nodownload noremoteplayback"
+                >
+                  <source src="vid/eye.mp4" type="video/mp4" />
+                  Please update your browser!
+                </video>
+                <img
+                  class="video-control play-pause"
+                  src="img/icons/002-pause.png"
+                />
+                <img
+                  class="video-control mute-unmute"
+                  src="img/icons/003-sound-off.png"
+                />
+              </div>
+            </article>
           </section>
 
           <section id="paragraph4">
-            <h1>Ambition</h1>
-            <aside>
-              <p>
+            <h1 class="sub-title fade-in">Ambition</h1>
+            <article class="block-fade-in">
+              <p class="fade-in">
                 Error debitis sapiente quo vel maxime fugit accusantium
                 possimus. Esse perspiciatis aut est rem et dolorem perferendis.
                 Nemo enim molestias omnis quo. Et alias non nemo possimus quam.
@@ -145,24 +178,35 @@
                 quod corrupti. Quisquam voluptatibus aut magni omnis
                 necessitatibus ea eum id.
               </p>
-            </aside>
-            <video
-              width="720"
-              height="720"
-              muted
-              autoplay
-              loop
-              controlslist="nofullscreen nodownload noremoteplayback"
-            >
-              <source src="vid/ko.mp4" type="video/mp4" />
-              Please update your browser!
-            </video>
+
+              <div class="video-wrapper fade-in">
+                <video
+                  width="720"
+                  height="720"
+                  muted
+                  autoplay
+                  loop
+                  controlslist="nofullscreen nodownload noremoteplayback"
+                >
+                  <source src="vid/ko.mp4" type="video/mp4" />
+                  Please update your browser!
+                </video>
+                <img
+                  class="video-control play-pause"
+                  src="img/icons/002-pause.png"
+                />
+                <img
+                  class="video-control mute-unmute"
+                  src="img/icons/003-sound-off.png"
+                />
+              </div>
+            </article>
           </section>
 
           <section id="paragraph5">
-            <h1>Success</h1>
-            <aside>
-              <p>
+            <h1 class="sub-title fade-in">Success</h1>
+            <article class="block-fade-in">
+              <p class="fade-in">
                 Error debitis sapiente quo vel maxime fugit accusantium
                 possimus. Esse perspiciatis aut est rem et dolorem perferendis.
                 Nemo enim molestias omnis quo. Et alias non nemo possimus quam.
@@ -172,24 +216,35 @@
                 quod corrupti. Quisquam voluptatibus aut magni omnis
                 necessitatibus ea eum id.
               </p>
-            </aside>
-            <video
-              width="720"
-              height="720"
-              muted
-              autoplay
-              loop
-              controlslist="nofullscreen nodownload noremoteplayback"
-            >
-              <source src="vid/callin.mp4" type="video/mp4" />
-              Please update your browser!
-            </video>
+
+              <div class="video-wrapper fade-in">
+                <video
+                  width="720"
+                  height="720"
+                  muted
+                  autoplay
+                  loop
+                  controlslist="nofullscreen nodownload noremoteplayback"
+                >
+                  <source src="vid/callin.mp4" type="video/mp4" />
+                  Please update your browser!
+                </video>
+                <img
+                  class="video-control play-pause"
+                  src="img/icons/002-pause.png"
+                />
+                <img
+                  class="video-control mute-unmute"
+                  src="img/icons/003-sound-off.png"
+                />
+              </div>
+            </article>
           </section>
 
           <section id="paragraph6">
-            <h1>Beyond Korea</h1>
-            <aside>
-              <p>
+            <h1 class="sub-title fade-in">Beyond Korea</h1>
+            <article class="block-fade-in">
+              <p class="fade-in">
                 Error debitis sapiente quo vel maxime fugit accusantium
                 possimus. Esse perspiciatis aut est rem et dolorem perferendis.
                 Nemo enim molestias omnis quo. Et alias non nemo possimus quam.
@@ -199,18 +254,29 @@
                 quod corrupti. Quisquam voluptatibus aut magni omnis
                 necessitatibus ea eum id.
               </p>
-            </aside>
-            <video
-              width="720"
-              height="720"
-              muted
-              autoplay
-              loop
-              controlslist="nofullscreen nodownload noremoteplayback"
-            >
-              <source src="vid/blackswan.mp4" type="video/mp4" />
-              Please update your browser!
-            </video>
+
+              <div class="video-wrapper fade-in">
+                <video
+                  width="720"
+                  height="720"
+                  muted
+                  autoplay
+                  loop
+                  controlslist="nofullscreen nodownload noremoteplayback"
+                >
+                  <source src="vid/blackswan.mp4" type="video/mp4" />
+                  Please update your browser!
+                </video>
+                <img
+                  class="video-control play-pause"
+                  src="img/icons/002-pause.png"
+                />
+                <img
+                  class="video-control mute-unmute"
+                  src="img/icons/003-sound-off.png"
+                />
+              </div>
+            </article>
           </section>
 
           <section id="next-page-button">
@@ -232,17 +298,16 @@
             <a href="https://www.flaticon.com/authors/becris" title="Becris"
               >Becris,</a
             >
-              <a href="https://www.freepik.com" title="Freepik">Freepik,</a>
-                and
-              <a href="https://www.flaticon.com/authors/chanut" title="Chanut"
-                >Chanut</a
-              >
-              from
-              <a href="https://www.flaticon.com/" title="Flaticon"
-                >www.flaticon.com</a
-              >
-            </div>
-          </div>
+            <a href="https://www.freepik.com" title="Freepik">Freepik,</a>
+            and
+            <a href="https://www.flaticon.com/authors/chanut" title="Chanut"
+              >Chanut</a
+            >
+            from
+            <a href="https://www.flaticon.com/" title="Flaticon"
+              >www.flaticon.com</a
+            >
+          </p>
         </footer>
       </div>
     </div>
