made tablet / landscape on the 2nd page

--- a/story.html
+++ b/story.html
@@ -50,7 +50,15 @@
 
       <div class="parallax-layer parallax-foreground">
         <main>
-          <h1 class="main-title fade-in">Our Story</h1>
+          <section>
+            <h1 class="main-title fade-in">Our Story</h1>
+            <img
+              class="down-arrow fade-in"
+              src="img/icons/icons8-expand-arrow-100.png"
+              alt="down arrow"
+            />
+          </section>
+
           <section id="paragraph1">
             <h1 class="sub-title fade-in">The Ragtag Team</h1>
             <article class="block-fade-in">
