Added 3rd page Fixed validator errors on story.html

--- a/story.html
+++ b/story.html
@@ -73,23 +73,17 @@
                 necessitatibus ea eum id.
               </p>
               <div class="video-wrapper fade-in">
-                <video
-                  id="video"
-                  width="720"
-                  height="720"
-                  autoplay
-                  muted
-                  loop
-                  controlslist="nofullscreen nodownload noremoteplayback"
-                >
+                <video id="video" width="720" height="720" autoplay muted loop>
                   <source src="vid/dope.mp4" type="video/mp4" />
                   Please update your browser!
                 </video>
                 <img
+                  alt="play-pause button"
                   class="video-control play-pause"
                   src="img/icons/002-pause.png"
                 />
                 <img
+                  alt="mute-unmute button"
                   class="video-control mute-unmute"
                   src="img/icons/003-sound-off.png"
                 />
@@ -112,22 +106,17 @@
               </p>
 
               <div class="video-wrapper fade-in">
-                <video
-                  width="720"
-                  height="720"
-                  muted
-                  autoplay
-                  loop
-                  controlslist="nofullscreen nodownload noremoteplayback"
-                >
+                <video width="720" height="720" muted autoplay loop>
                   <source src="vid/fantasy.mp4" type="video/mp4" />
                   Please update your browser!
                 </video>
                 <img
+                  alt="play-pause button"
                   class="video-control play-pause"
                   src="img/icons/002-pause.png"
                 />
                 <img
+                  alt="mute-unmute button"
                   class="video-control mute-unmute"
                   src="img/icons/003-sound-off.png"
                 />
@@ -150,22 +139,17 @@
               </p>
 
               <div class="video-wrapper fade-in">
-                <video
-                  width="720"
-                  height="720"
-                  muted
-                  autoplay
-                  loop
-                  controlslist="nofullscreen nodownload noremoteplayback"
-                >
+                <video width="720" height="720" muted autoplay loop>
                   <source src="vid/eye.mp4" type="video/mp4" />
                   Please update your browser!
                 </video>
                 <img
+                  alt="play-pause button"
                   class="video-control play-pause"
                   src="img/icons/002-pause.png"
                 />
                 <img
+                  alt="mute-unmute button"
                   class="video-control mute-unmute"
                   src="img/icons/003-sound-off.png"
                 />
@@ -188,22 +172,17 @@
               </p>
 
               <div class="video-wrapper fade-in">
-                <video
-                  width="720"
-                  height="720"
-                  muted
-                  autoplay
-                  loop
-                  controlslist="nofullscreen nodownload noremoteplayback"
-                >
+                <video width="720" height="720" muted autoplay loop>
                   <source src="vid/ko.mp4" type="video/mp4" />
                   Please update your browser!
                 </video>
                 <img
+                  alt="play-pause button"
                   class="video-control play-pause"
                   src="img/icons/002-pause.png"
                 />
                 <img
+                  alt="mute-unmute button"
                   class="video-control mute-unmute"
                   src="img/icons/003-sound-off.png"
                 />
@@ -226,22 +205,17 @@
               </p>
 
               <div class="video-wrapper fade-in">
-                <video
-                  width="720"
-                  height="720"
-                  muted
-                  autoplay
-                  loop
-                  controlslist="nofullscreen nodownload noremoteplayback"
-                >
+                <video width="720" height="720" muted autoplay loop>
                   <source src="vid/callin.mp4" type="video/mp4" />
                   Please update your browser!
                 </video>
                 <img
+                  alt="play-pause button"
                   class="video-control play-pause"
                   src="img/icons/002-pause.png"
                 />
                 <img
+                  alt="mute-unmute button"
                   class="video-control mute-unmute"
                   src="img/icons/003-sound-off.png"
                 />
@@ -264,22 +238,17 @@
               </p>
 
               <div class="video-wrapper fade-in">
-                <video
-                  width="720"
-                  height="720"
-                  muted
-                  autoplay
-                  loop
-                  controlslist="nofullscreen nodownload noremoteplayback"
-                >
+                <video width="720" height="720" muted autoplay loop>
                   <source src="vid/blackswan.mp4" type="video/mp4" />
                   Please update your browser!
                 </video>
                 <img
+                  alt="play-pause button"
                   class="video-control play-pause"
                   src="img/icons/002-pause.png"
                 />
                 <img
+                  alt="mute-unmute button"
                   class="video-control mute-unmute"
                   src="img/icons/003-sound-off.png"
                 />
